--- a/kalima-platform/frontend/index.html
+++ b/kalima-platform/frontend/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" href="/Kalima.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Kelma Platform is an e-learning platform that provides resources for students from fourth grade primary to third grade secondary."/>
+    <meta
+      name="description"
+      content="Kelma Platform is an e-learning platform that provides resources for students from fourth grade primary to third grade secondary."
+    />
     <link rel="apple-touch-icon" href="/Kalima.png" />
     <link rel="android-touch-icon" href="/Kalima.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>منصة كلمه التعليميه</title>
+    <title>منصة كلمة التعليمية</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
