--- a/kalima-platform/frontend/index.html
+++ b/kalima-platform/frontend/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/jpg" href="/Kalima.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>منصة كلمة التعليمية</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Sora:wght@100..800&display=swap"
+    rel="stylesheet">
   <meta name="description"
     content="منصة تعليمية متكاملة توفر لك أفضل المعلمين والدورات التعليمية من الصف الرابع الابتدائي حتى الثالث الثانوي." />
   <meta name="keywords"
